# web-games

flesh_orb_test/: application.py  pyproject.toml  resetdb.py  room_helpers.py  user_helpers.py  verify_email.py
flesh_orb_test/docs/: readme.md  todo.md
flesh_orb_test/instance/: users.db
flesh_orb_test/static/css/: style.css
flesh_orb_test/static/js/: register.js
flesh_orb_test/templates/: base.html  beach.html  garden.html  home.html  indoor_a.html  indoor_d.html  indoor_e.html  login.html  plaza.html  register.html  test.html  verification_email.html
little_grid_world/: .gitignore  README.md  app.py  application.py  blame.json  data.json  image_converter.py  pyproject.toml
little_grid_world/data/: blame.json  data.json
little_grid_world/static/: script.js  style.css
little_grid_world/templates/: index.html  old_index.html
little_logic_world/: README.md  application.py  circuit_sim copy.py  circuit_sim.py  pyproject.toml  requirements.txt  test_circuit_sim.py
little_logic_world/data/: blame.json  data.json
little_logic_world/python_utils/: blame.py  png_to_json.py
little_logic_world/static/: script.js  style.css
little_logic_world/templates/: index.html
