[tool.poetry]
name = "server for club flesh orb"
version = "0.0.1"
description = ""
authors = ["sado.systems <sadosystemz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.1"
Flask = "3.0.0"
Flask-SocketIO = "5.3.6"
eventlet = "^0.33.3"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
vulture = "2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "atp_v3.atp_python_v1:main"